Fix alignment of net panel twisty

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -248,7 +248,7 @@
     display: none;
     -moz-user-select: none;
     padding-right: 10px;
-    padding-bottom: 2px;
+    padding-bottom: 3px;
     max-width: calc(100% - 38px);
     background: #FFFFFF;
     z-index: 200;
